Small bugfix.
• Fixed a bug where the screenshots were overflowing incorrectly.

--- a/src/css/1_main.css
+++ b/src/css/1_main.css
@@ -43,6 +43,7 @@ body{
     flex-direction: column;
     width: 100vw;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 h1{}
 h2{}
