--- a/src/css/3_landscape.css
+++ b/src/css/3_landscape.css
@@ -107,11 +107,14 @@
     .screenshotContainer:hover{
         filter: grayscale(0%) opacity(1);
     }
-    .buttonMenu:hover{
+    /*.buttonMenu:hover{
         width: 15vh;
         height: 15vh;
         margin: 0 0 0 0;
-    }
+
+        left: 2.5vh;
+        top: 27.5vh;
+    }*/
     /* =================================== ANIMATIONS ===================================== */
     /* ==================================================================================== */
 
